Fix (the-message): add z-index on mask to keep it on the top. - Or it'll under components like dialog.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,3 +1,6 @@
 @import "@/assets/styles/reset";
 @import "@/assets/styles/vars";
 @import "@/assets/styles/classes";
+.mask {
+  z-index: 9999; // To keep the-message on the top.
+}
